Bug 1278517 - [devtools] Add button next to CSS variable to jump to definition. r=devtools-reviewers,jdescottes.
Depends on D260582

Differential Revision: https://phabricator.services.mozilla.com/D179412

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -344,11 +344,16 @@
 
 /**
  * Display rules that don't match the current selected element and uneditable
- * user agent styles differently
+ * user agent styles differently.
+ * Use :where() to get a 0-specificity rule so the background-color can be overridden
+ * if needed (e.g. when highlighted by `.theme-bg-contrast`)
  */
-.ruleview-rule.unmatched,
-.ruleview-rule[unmatched="true"],
-.ruleview-rule[uneditable="true"] {
+/* prettier-ignore */
+:where(
+  .ruleview-rule.unmatched,
+  .ruleview-rule[unmatched="true"],
+  .ruleview-rule[uneditable="true"]
+) {
   background: var(--theme-tab-toolbar-background);
 }
 
